# bodywork-playground

./: README.rst  bodywork.yaml  pyproject.toml
tests/: test_turbo_waffle.py
turbo_waffle/: get_breast_cancer_data.py  preprocess_data.py  train_random_forest.py
